--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
     display: flex;
     justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: rgba(176, 161, 45, 0.56);
 }
 
 .grid {
